SET(
  CYCLUS_CORE_TEST_INCLUDE_DIRS "${CYCLUS_CORE_TEST_INCLUDE_DIRS}"
  "${CMAKE_CURRENT_SOURCE_DIR}" 
  PARENT_SCOPE
  )

FILE(GLOB cc_files "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")
SET(CYCLUS_AGENT_TEST_SOURCE ${cc_files})
FILE(GLOB h_files "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
SET(CYCLUS_AGENT_TEST_INCL ${h_files})

INSTALL(
  FILES ${h_files}
  DESTINATION include/cyclus
  COMPONENT core
  )

SET(TGT "baseagentunittests")

ADD_LIBRARY( 
  ${TGT}
  ${CYCLUS_AGENT_TEST_SOURCE}
  )

SET_TARGET_PROPERTIES( 
  ${TGT}
  PROPERTIES 
  INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib/cyclus"
  INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib/cyclus"
  )

TARGET_LINK_LIBRARIES( 
  ${TGT} dl 
  ${LIBS}
  cyclus
  gtest
  )

INSTALL(
  TARGETS ${TGT}
  LIBRARY DESTINATION lib/cyclus
  COMPONENT testing
  )

SET(CYCLUS_TEST_LIBRARIES "${CYCLUS_TEST_LIBRARIES}" "${TGT}" PARENT_SCOPE)
